Fix CSS Overview sidebar item width for overflow
Also removing a `cursor: pointer` as a drive-by.

R=changhaohan@chromium.org

Fixed:1408003
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4177298
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/css_overview/cssOverviewSidebarPanel.css
+++ b/front_end/panels/css_overview/cssOverviewSidebarPanel.css
@@ -15,9 +15,12 @@
   padding-left: 30px;
   display: flex;
   align-items: center;
-  cursor: pointer;
   color: var(--color-text-primary);
   white-space: nowrap;
+}
+
+.overview-sidebar-panel-container {
+  min-width: fit-content;
 }
 
 .overview-sidebar-panel-item:hover,
